# dumb-contracts

./: README.md  chain.json  package-lock.json  package.json  transactions.json
blockchain/: Cargo.toml
blockchain/src/: account.rs  chain.rs  lib.rs  smart_contract.rs
cli/: Cargo.toml  config.json
cli/src/: main.rs
client/: index.css  index.html  index.js
dumb-contract/: Cargo.toml
dumb-contract/src/: lib.rs
node/: account.js  add-address.js  airdrop.js  contract.js  deploy.js  index.js  mine.js  state.js  transactions.js  utils.js
server/: index.js
web3/: idl.json  index.js
