[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.2", features = ["macros"] }
serde_json = { version = "1.0.81" }
serde = { version = "1.0.137", features = ["derive"] }
